@@ -60,6 +60,7 @@ if __name__ == "__main__":
     yl = "\033[1;33m"
     bl = "\033[1;34m"
     pk = "\033[1;35m"
+    cy = "\033[1;36m"
     nc = "\033[0m"
 
     #______________________ options _________________________
@@ -102,6 +103,10 @@ if __name__ == "__main__":
             help='Put converted file into specified folder')
     parser.add_option('--cd', '--cdrip', dest='cdrip', action='store_true',
                       default=False, help='rip Compact Disc (CD) digital audio')
+    parser.add_option('--list-formats', dest='list_formats', action='store_true', default=False,
+            help='Show available audio formats to convert to')
+    parser.add_option('-p', '--processes', dest='num_pocs', default=0, type=int, 
+            help='Use the specified number of parallel processes. CPU count is the maximum.'
     opt, files = parser.parse_args()
     
     if opt.upgrade:
@@ -133,7 +138,7 @@ if __name__ == "__main__":
     home = os.getcwd()
     fmt = opt.format.lower()
     qual = opt.quality.lower()
-    supported_formats = check_deps(check=opt.check)
+    supported_formats = check_deps(check=opt.check, list_formats=opt.list_formats)
     if fmt in ("mp4", "m4a", "aac"): 
         fmt = "m4a"
     if fmt in ("mpc", "musepack"):
@@ -189,12 +194,14 @@ if __name__ == "__main__":
     times = []
 
 
-    def consume_queue(input_q):
+    def consume_queue(input_q, cpucount):
         global outdir
         global fails
         while True:
             if input_q.empty():
+                print2("Terminating ftransc process running on %s" % cpucount)
                 break
+            progress = 100.0 * (total - input_q.qsize() + 1) / float(total)
             filename = input_q.get(False)
             new_dir = os.path.dirname(filename)
             ifile = os.path.basename(filename)
@@ -217,34 +224,34 @@ if __name__ == "__main__":
                     os.chdir(home)
 
             if ofile == ifile:
-                print2("%s%s%s | input = output | %sskipped%s\n" %\
-                       (bl, ifile, nc, yl, nc))
+                print2("%.1f%%| %s| %s%s%s | input = output | %sskipped%s\n" %\
+                       (progress, cpucount, bl, ifile, nc, yl, nc))
                 fails += 1
                 input_q.task_done()
                 continue
             if not os.path.exists(ifile):
-                print2("%s%s%s | %sdoes not exist%s\n" %\
-                       (bl, ifile, nc, rd, nc))
+                print2("%.1f%%| %s| %s%s%s | %sdoes not exist%s\n" %\
+                       (progress, cpucount, bl, ifile, nc, rd, nc))
                 fails += 1
                 input_q.task_done()
                 continue
             if os.path.isfile(ofile) and not opt.overwrite:
-                print2("%s%s%s | use '-w' to overwrite | %sskipped%s\n" %\
-                       (bl, ifile, nc, yl, nc))
+                print2("%.1f%%| %s| %s%s%s | use '-w' to overwrite | %sskipped%s\n" %\
+                       (progress, cpucount, bl, ifile, nc, yl, nc))
                 fails += 1
                 input_q.task_done()
                 continue
             if os.path.isdir(ifile) and opt.walk is None:
-                print2("%s%s%s |  use '--directory' | %sskipped%s\n" %\
-                       (bl, ifile, nc, yl, nc))
+                print2("%.1f%%| %s| %s%s%s |  use '--directory' | %sskipped%s\n" %\
+                       (progress, cpucount, bl, ifile, nc, yl, nc))
                 fails += 1
                 input_q.task_done()
                 continue
                 #_____________ lockfile creation ________________
             swp_file = ".%s.swp" % ifile
             if os.path.isfile(swp_file) and not opt.unlock:
-                print2("%s%s%s | use '-u' to unlock | %sskipped%s\n" %\
-                       (bl, ifile, nc, yl, nc))
+                print2("%.1f%%| %s| %s%s%s | use '-u' to unlock | %sskipped%s\n" %\
+                       (progress, cpucount, bl, ifile, nc, yl, nc))
                 fails += 1
                 input_q.task_done()
                 continue
@@ -254,16 +261,16 @@ if __name__ == "__main__":
                         pass
                 except IOError:
                     input_q.task_done()
-                    raise SystemExit("%sNo permissions%s to write to this folder" %\
-                                     (rd, nc))
+                    raise SystemExit("%.1f%%| %s| %sNo permissions%s to write to this folder" %\
+                                     (progress, cpucount, rd, nc))
                     #______________ extract metadata ________________
             try:
                 if not no_tags:
                     metadata = MetaTag(ifile)
                     albumart = CoverTag(ifile)
             except IOError:
-                print2("%s%d/%d%s | %s%s%s | %sUnreadable%s\n"  %\
-                       (bl, ifile, nc, rd, nc))
+                print2("%.1f%%| %s| %s%d/%d%s | %s%s%s | %sUnreadable%s\n"  %\
+                       (progress, cpucount, bl, ifile, nc, rd, nc))
                 dummy = os.remove(swp_file)
                 fails += 1
                 input_q.task_done()
@@ -271,14 +278,16 @@ if __name__ == "__main__":
                 #___________ audio convert ______________
             ifilename, in_ext = os.path.splitext(ifile)
             if converters[fmt](ifilename, in_ext, logfile, outdir, preset=preset):
-                print2("to %s | %s%s%s | %sSuccess%s\n" % (fmt.upper(), bl, ifile, nc, gr, nc), noreturn=True)
+                print2("%.1f%%| %s| to %s | %s%s%s | %sSuccess%s\n" %\
+                       (progress, cpucount, fmt.upper(), bl, ifile, nc, gr, nc), noreturn=True)
                 if opt.remove:
                     dummy = os.remove(ifile)
                 if fmt.lower() == "flac":
                     dummy = os.remove(ifilename + '.wav')
                 dummy = os.remove(swp_file)
             else:
-                print2("to %s | %s%s%s | %sFail%s\n" % (fmt.upper(), bl, ifile, nc, rd, nc), noreturn=True)
+                print2("%.1f%%| %s| to %s | %s%s%s | %sFail%s\n" %\
+                       (progress, cpucount, fmt.upper(), bl, ifile, nc, rd, nc), noreturn=True)
                 dummy = os.remove(swp_file)
                 fails += 1
                 input_q.task_done()
@@ -292,7 +301,7 @@ if __name__ == "__main__":
                     del albumart
             except Exception, err:
                 if opt.debug:
-                    print2("%s%s%s\n" % (rd, err.message, nc))
+                    print2("%.1f%%| %s| %s%s%s\n" % (progress, cpucount, rd, err.message, nc))
             logfile.close()
             toc = time.time()
             times.append(toc - tic)
@@ -300,11 +309,16 @@ if __name__ == "__main__":
             input_q.task_done()
 
 
+    proc_colors = {0: pk, 1: cy}
     q = multiprocessing.JoinableQueue()
     for filename in files:
         q.put(filename)
-    for pcount in xrange(multiprocessing.cpu_count()):
-        x = multiprocessing.Process(target=consume_queue, args=(q,))
+    num_procs = multiprocessing.cpu_count()
+    if 0 < opt.num_procs < num_procs:
+        num_procs = opt.num_procs
+    for pcount in xrange(1, num_procs + 1):
+        proc_name = '%sCPU%d%s' % (proc_colors[pcount % 2], pcount, nc)
+        x = multiprocessing.Process(target=consume_queue, args=(q, proc_name))
         x.daemon = True
         x.start()
 
