@@ -10,9 +10,9 @@ from ftransc.utils import m3u_extract
 from ftransc.utils.constants import VERSION
 
 class Window(Gtk.Window):
-    def __init__(self):
+    def __init__(self, cmdlinefiles=None):
         super(Window, self).__init__(title='ftransc Audio Converter v%s' % VERSION)
-        self.files = ['ftransc', 'ftransc_gtk', 'ftransc_qt']
+        self.files = cmdlinefiles or []
 
         self.main_pane = Gtk.Box()
         self.main_pane.set_orientation(Gtk.Orientation.HORIZONTAL)
@@ -122,6 +122,6 @@ class Window(Gtk.Window):
         pass
 
 if __name__ == '__main__':
-    app = Window()
+    app = Window(cmdlinefiles=m3u_extract(sys.argv[1:], mode='playlist'))
     app.main()
 
